force-app/main/default/objects/SousMatieres__c/SousMatieres__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Référentiel des sous-matières dans le tarif</description>
    <label>Référentiel des sous-matières</label>
</CustomObject>