force-app/main/default/objects/SousMatieres__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <label>Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>