force-app/main/default/objects/SousMatieres__c/fields/libelle__c.field-meta.xml
<CustomField>
    <fullName>libelle__c</fullName>
    <label>Libellé</label>
    <length>30</length>
    <type>Text</type>
</CustomField>