force-app/main/default/objects/SousMatieres__c/fields/matiere__c.field-meta.xml
<CustomField>
    <fullName>matiere__c</fullName>
    <label>Code matière</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>